# RayTracer

./: .gitignore  CMakeLists.txt  README.md  Source.cpp  aabb.h  bvh_node.h  camera.h  constant_medium.h  dielectric.h  hitable.h  hitable_list.h  img.ppm  imgui.ini  lambertian.h  material.h  metal.h  pdf.h  perlin.h  random_number.h  ray.h  raytracer.sln  raytracer.vcxproj  raytracer.vcxproj.filters  rect.h  sphere.h  stb_image.h  stb_image_write.h  texture.h  vertex.h
dependencies/Debug/linux/: libOpenImageDenoise.so.0
dependencies/Release/: glfw3dll.exp
dependencies/Release/linux/: libglfw.so.3.4
dependencies/include/glad/: glad.c  glad.h
dependencies/lib/: OpenImageDenoiseRelease.lib
models/: monkey.stl
sample_scenes/: cornell_box.json  dragon_scene.json  model_scene.json
src/: CMakeLists.txt  Source.cpp  viewer.cpp
src/materials/: material.cpp  material.h  material.hpp
src/objects/camera/: camera.cpp  camera.h  camera.hpp
src/objects/hitables/: allHitables.h  allHitables.hpp  box.cpp  box.h  box.hpp  bvh_node.cpp  bvh_node.h  bvh_node.hpp  constant_medium.h  constant_medium.hpp  hitable.cpp  hitable.h  hitable.hpp  hitable_list.cpp  hitable_list.h  hitable_list.hpp  mesh.cpp  mesh.h  mesh.hpp  model.cpp  model.h  model.hpp  rect.cpp  rect.h  rect.hpp  scene.h  scene.hpp  sphere.cpp  sphere.h  sphere.hpp  triangle.cpp  triangle.h  triangle.hpp
src/render_process/: lighting_integrator.cpp  lighting_integrator.h  lighting_integrator.hpp  render_settings.h  render_settings.hpp  render_worker.cpp  render_worker.h  render_worker.hpp  tile_pool.cpp  tile_pool.h  tile_pool.hpp
src/render_process/sampling/: camera_sample.hpp  random_sampler.cpp  random_sampler.h  random_sampler.hpp  sampler.cpp  sampler.h  sampler.hpp  stratified_sampler.cpp  stratified_sampler.h  stratified_sampler.hpp
src/textures/: perlin.cpp  perlin.h  perlin.hpp  texture.cpp  texture.h  texture.hpp
src/util/: aabb.h  imfilebrowser.h  utility_functions.h  utility_functions.hpp
src/util/bounding_box/: aabb.cpp  aabb.h  aabb.hpp
src/util/denoiser/: denoiser.cpp  denoiser.h  denoiser.hpp
src/util/helper/: helper.h
src/util/image/: image.cpp  image.h  image.hpp
src/util/math/: onb.cpp  onb.h  onb.hpp  ray.h  ray.hpp  vec3.cpp  vec3.h  vec3.hpp  vertex.hpp
src/util/pdf/: pdf.h  pdf.hpp
src/util/rng/: random_number.cpp  random_number.h  random_number.hpp
src/util/scene_parser/: scene_parser.cpp  scene_parser.h  scene_parser.hpp
viewer/: viewer.vcxproj  viewer.vcxproj.filters
